--- a/UIManager/uiApplication.ui
+++ b/UIManager/uiApplication.ui
@@ -257,6 +257,12 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>500</height>
+       </size>
+      </property>
       <property name="currentIndex">
        <number>0</number>
       </property>
